--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,15 +1,16 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+// $primary-color: #02aab0;
+// $secondary-color: #00cdac;
 
-// $primary-color: #7f449d;
-// $secondary-color: #793fc1;
+$primary-color: #4b79a1;
+$secondary-color: #283e51;
 
-$white-color: #fff;
+$white-color: #eee;
 
 $dark-grey: #333333;
 
-$dark-blue-text: #272341; // For Headings
+// $dark-blue-text: #272341; // For Headings
+$dark-blue-text: #333333; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
